# Consuma-Internship-Assignment

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  BACKLOG.md  CLAUDE.md  FEATURES.md  Makefile  PROGRESS.md  README.md  demo.sh  docker-compose.yml  feature_list.json  init.sh  pyproject.toml
docs/: ARCHITECTURE.md  DECISIONS.md  DISPATCH-M1.md  SNIPPET-PREP.md  SPEC.md
docs/features/: 00-foundation.md  01-domain.md  02-redis.md  03-db-queries.md  04-worker.md  05-gateway.md  06-e2e.md  07-infra.md  08-docs.md
services/gateway/: Dockerfile  pyproject.toml
services/gateway/src/gateway/: __init__.py  main.py  schemas.py  sweeper.py
services/worker/: Dockerfile  pyproject.toml
services/worker/src/worker/: __init__.py  bootstrap.py  dispatch.py  errors.py  main.py  maintenance.py  ssrf.py
services/worker/src/worker/handlers/: __init__.py  _base.py  dlq.py  parse.py  stitch.py  tts.py
tests/: conftest.py
tests/e2e/: __init__.py  conftest.py  helpers.py  test_behavior.py  test_cache_fanin.py  test_crash_recovery.py  test_duplicate_delivery.py  test_edge_cases.py  test_harness_smoke.py  test_poison_pill.py  test_semaphore.py  test_stitch_webhook.py
tests/integration/: __init__.py  conftest.py  test_broker.py  test_dlq_resolver.py  test_ingestion.py  test_models.py  test_parse.py  test_redis.py  test_stats.py  test_stitch.py  test_storage.py  test_sweeper.py  test_topology.py  test_tts.py  test_webhook.py  test_worker_bootstrap.py
tests/unit/: __init__.py  test_architecture.py  test_architecture_doc.py  test_base_handler.py  test_dispatch.py  test_error_handlers.py  test_errors.py  test_events.py  test_fault_injection.py  test_hash.py  test_health.py  test_logging.py  test_prefetch.py  test_reaper.py  test_reseeder.py  test_run_loop.py  test_schemas.py  test_smoke.py  test_spec_consistency.py  test_ssrf.py  test_state_machine.py  test_sweeper_loop.py  test_text.py
