[project]
name = "consuma-audio-engine"
version = "0.1.0"
description = "Core async engine: text manuscript -> simulated produced audio drama (choreographed microservices)."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

# This root is the workspace umbrella, not a distributable package.
# `package = false` tells uv not to try to build it as a wheel.
[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/core", "services/gateway", "services/worker"]

# Shared dev/test toolchain lives at the root, installed for the whole workspace.
# The three workspace members are dev-deps of the root so `uv run` (mypy/pytest/ruff)
# sees core/gateway/worker and their transitive deps in one shared .venv.
[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "testcontainers",
    "httpx",
    "ruff",
    "mypy>=1.13",
    "core",
    "gateway",
    "worker",
]

[tool.uv.sources]
core = { workspace = true }
gateway = { workspace = true }
worker = { workspace = true }

# --- Test runner ---------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# --- Lint / format -------------------------------------------------------------
[tool.ruff]
target-version = "py313"
line-length = 100

# --- Type checking (Definition-of-Done gate) -----------------------------------
[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
files = ["packages/core/src", "services/gateway/src", "services/worker/src", "tests"]
mypy_path = "packages/core/src:services/gateway/src:services/worker/src"
explicit_package_bases = true
namespace_packages = true

# Third-party libs without bundled type stubs — don't fail --strict on them.
[[tool.mypy.overrides]]
module = ["aio_pika.*", "minio.*"]
ignore_missing_imports = true
