[project]
name = "gateway"
version = "0.1.0"
description = "Deployable app: FastAPI ingestion gateway. Depends on core, never on worker."
requires-python = ">=3.13"
dependencies = [
    "core",
    "fastapi>=0.138.0",
    "uvicorn[standard]>=0.49.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gateway"]

[tool.uv.sources]
core = { workspace = true }
