[project]
name = "worker"
version = "0.1.0"
description = "Deployable app: aio-pika consumer running the pipeline handlers. Depends on core, never on gateway."
requires-python = ">=3.13"
dependencies = [
    "aio-pika>=9.6.2",
    "core",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worker"]

[tool.uv.sources]
core = { workspace = true }
